create github pages

--- a/page2.html
+++ b/page2.html
@@ -40,7 +40,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="#top">
                          <img src="assets/images/1776-oooo.plus.ico" alt="Mobirise" title="" style="height: 4.6rem;">
                     </a>
                 </span>
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section once="footers" class="cid-s7lluG9meF" id="footer6-h">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own website for free</a></section><section once="footers" class="cid-s7lluG9meF" id="footer6-h">
 
     
 
