--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="#top">
                          <img src="assets/images/1776-oooo.plus.ico" alt="Mobirise" title="" style="height: 4.6rem;">
                     </a>
                 </span>
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header10 cid-s7lg3eYF7j mbr-fullscreen mbr-parallax-background" id="header10-4">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="header10 cid-s7lg3eYF7j mbr-fullscreen mbr-parallax-background" id="header10-4">
 
     
 
