create github pages

--- a/About.html
+++ b/About.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="clients2 cid-s8uAclMBE0" id="clients2-w">
+<section class="engine"><a href="https://mobirise.info/e">how to make a website</a></section><section class="clients2 cid-s8uAclMBE0" id="clients2-w">
 
     
 
