--- a/Home.html
+++ b/Home.html
@@ -50,7 +50,7 @@
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page3.html">
                             Versions</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page4.html">
-                            About us</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html">
+                            About us</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page5.html">
                             F.A.Q</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html">Features</a>
                     </li></ul>
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="header12 cid-s8ujllKg83 mbr-parallax-background" id="header12-4">
+<section class="engine"><a href="https://mobirise.info/g">build your own website for free</a></section><section class="header12 cid-s8ujllKg83 mbr-parallax-background" id="header12-4">
 
     
 
