--- a/page3.html
+++ b/page3.html
@@ -52,7 +52,7 @@
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page3.html">
                             Versions</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page4.html">
-                            About us</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html">
+                            About us</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page5.html">
                             F.A.Q</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html">Features</a>
                     </li></ul>
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="pricing2 cid-s8uw4l6SSi" id="pricing2-t">
+<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section class="pricing2 cid-s8uw4l6SSi" id="pricing2-t">
     
 
     
