create github pages

--- a/page3.html
+++ b/page3.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section class="pricing2 cid-s8uw4l6SSi" id="pricing2-t">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section class="pricing2 cid-s8uw4l6SSi" id="pricing2-t">
     
 
     
